hphp/test/zend/bad/ext/gd/tests/imagelayereffect_error2.php
<?php
$image = imagecreatetruecolor(180, 30);

$layer = imagelayereffect($image, 'IMG_EFFECT_REPLACE');
?>